# hermetic_cc_toolchain

./: .bazelignore  .bazelrc  .build.yml  .envrc  .gitignore  BUILD  LICENSE  MODULE.bazel  NOTICE  Publicity.md  README.md  WORKSPACE  WORKSPACE.bazel  build-and-file  getpath  go.mod  go.sum  hangzig  mailing-list-archive.mbox  param_file_features.patch  release  relnotes.awk  repositories.bzl  tools.go
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.buildkite/: pipeline.yml  setup-bazelrc.sh
.github/workflows/: ci.yaml
ci/: launcher  launcher-wine64  lint  list_toolchains_platforms  prepare_git  release  release_boilerplate  release_v99  test  test_example  zig-utils  zig-wrapper  zig-wrapper-wine64
ci/testdata/: want_cache
contrib/: README-patched.md  build-and-archive  makerel  own_zig.md
examples/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/rules_cc/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  hello_world.cc  hello_world_test.cc
patches/: rulesgo-race-extld.patch
patches/rules_docker/: transitions.patch
rules/: BUILD  cp.zig  go_binary_override.bzl  platform.bzl  rules_go.bzl  zig_binary.bzl
test/: BUILD  BUILD.bazel  boost_exception.cpp  exception.cpp  hello.go  hello_test.go
test/ar/: BUILD  main.c  member.c  thin_archive_test.sh
test/c/: BUILD  c_test.go  main.c  test.sh
test/cgo/: BUILD  cgo.go  cgo_test.go
test/colon_link/: BUILD  greeter.c  main.c
test/glibc_hacks/: BUILD  main.c
test/go/: BUILD  hello.go  hello_test.go
test/gorace/: BUILD  main.go  main_test.go
test/plugin/: BUILD  plugin.go  plugin_test.go
test/soname/: BUILD  lib.c  soname_test.go
test/windows/: BUILD  main.c
toolchain/: BUILD  BUILD.macos.bazel  BUILD.sdk.bazel  defs.bzl  ext.bzl  launcher.zig  utils.bzl  zig-wrapper.zig  zig_cc_toolchain.bzl  zig_toolchain.bzl
toolchain/libc/: BUILD  BUILD.sdk.bazel  defs.bzl
toolchain/libc_aware/platform/: BUILD  BUILD.sdk.bazel
toolchain/libc_aware/toolchain/: BUILD  BUILD.bazel.tmpl  BUILD.sdk.bazel
toolchain/platform/: BUILD  defs.bzl
toolchain/private/: BUILD.sdk.bazel  cc_toolchains.bzl  defs.bzl  http_pkg_archive.bzl  repositories.bzl  toolchains.bzl  zig_sdk.bzl  zig_toolchain.bzl  zig_toolchain_info.bzl  zig_toolchains.bzl
toolchain/toolchain/: BUILD  BUILD.bazel.tmpl  BUILD.sdk.bazel  defs.bzl
tools/: bazel  buildifier  mod-tidy
tools/gazelle/: BUILD
tools/releaser/: BUILD  WORKSPACE  main.go  main_test.go  zopfli.go
tools/releaser/data/: MODULE.bazel  README
zig-toolchains/: BUILD  defs.bzl  zig_toolchain.bzl
