# Copyright 2023 Uber Technologies, Inc.
# Licensed under the MIT License

load("@hermetic_cc_toolchain//toolchain:defs.bzl", "declare_files")
load("@hermetic_cc_toolchain//toolchain/private:cc_toolchains.bzl", "declare_cc_toolchains")

package(
    default_visibility = ["//visibility:public"],
)

declare_files(
    os = {os},
)

declare_cc_toolchains(
    os = {os},
    zig_sdk_path = {zig_sdk_path},
)
