module(
    name = "hermetic_cc_toolchain_bcr_tests",
    version = "0.1.0",
)

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk", "zig_toolchains")

_EXEC_PLATFORMS = {
    "linux": ["amd64", "arm64"],
    "macos": ["amd64", "arm64"],
    "windows": ["amd64"],
}

[register_toolchains(
    "@zig_toolchains//{}-{}/toolchain:linux_amd64_gnu.2.31".format(os, arch),
    "@zig_toolchains//{}-{}/toolchain:linux_arm64_gnu.2.31".format(os, arch),
    "@zig_toolchains//{}-{}/toolchain:windows_amd64".format(os, arch),
    "@zig_toolchains//{}-{}/toolchain:windows_arm64".format(os, arch),
) for os, archs in _EXEC_PLATFORMS.items() for arch in archs]

bazel_dep(
    name = "rules_go",
    version = "0.48.0",
    repo_name = "io_bazel_rules_go",
)
