# Copyright 2023 Uber Technologies, Inc.
# Licensed under the MIT License

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_binary(
    name = "hello_world",
    srcs = ["hello_world.cc"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "hello_world_test",
    srcs = ["hello_world.cc"],
)
